# indoor_drone_experimentation

./: .gitmodules  README.md  v4l2_stream.c
YoctoTesting/: Dockerfile  docker-compose.yml  install.sh
kernel_dev_testing/: Dockerfile  README.md  build_container.sh  run_container.sh
kimera-cross-compile/aarch64_docker/: Dockerfile  docker-compose.yml
kimera-cross-compile/my_test_scripts/: CMakeLists.txt  test_rpgo.cpp
kimera_eval/: .gitignore  README.md  collect.sh  drift_assessment.py  post_proc_extracted.sh  post_process.sh  run_kimera.sh
kimera_local_eval/: .gitignore  README.md  Untitled.ipynb  Untitled1.ipynb  requirements.txt
kimera_local_eval/checking_jitter/: Jitter_Investigation.ipynb  Jitter_Investigation_w_Jaka_Script.ipynb  imu_check_timings.py  imu_check_timings_jaka.py  update.py
kimera_local_eval/delta_analysis/: Cam_IMU_Timestamp_Checks.ipynb  Deltas_Custom_Dataset.ipynb  Deltas_Euroc_Dataset.ipynb  Timestamp_Checks_Manipulation.ipynb
kimera_local_eval/euroc_dataset_corruption/: Perturb_CAM_Data.ipynb  Perturb_IMU_Data.ipynb
kimera_local_eval/euroc_dataset_downsampling/: Downsample_CAM_Data.ipynb  Downsample_IMU_Data.ipynb  Downsample_Perturb_IMU_Data.ipynb
kimera_local_eval/ground_truth_generation/: .gitignore  april_tag_detector.py  camera_calibration.py  camera_matrix.pkl  config.json  get_images.py  main.py  requirements.txt
kimera_local_eval/imu_timestamp_investigation/: Plots.ipynb
kimera_local_eval/kimera_data_generation/: Dataset_Check.ipynb  Linear_Interpolation_Check.ipynb  config.json  main.py  main_no_sync_node.py  main_no_sync_node_interpolation.py  main_sync.py  main_sync_node.py
kimera_local_eval/kimera_execution_analysis/: Inspecting _Kimera_Output.ipynb  plot_backend.ipynb  plot_backend.py  plot_frontend.ipynb  plot_frontend.py
kimera_local_eval/luxonis_scripts/: main.py  readme.txt
kimera_local_eval/scripts_for_docker_container/: copy_calibration.sh  copy_output_logs.sh  start_docker.sh
kimera_remote_eval/: README.md  collect.sh  post_process.sh  run_kimera.sh
libcamera_dev/: Dockerfile  aarch64.txt
v4l2_streaming/: display_images.py
yocto-dev/: README.md
yocto-dev/build_conf/: README.md  bblayers.conf  local.conf
yocto-dev/misc_scripts/gtsam_som_test/: CMakeLists.txt
(+35 files in other folders)
